spargen/tests/snapshots/diff__changed_param_type_is_major.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|param-type-changed|GET /pets param `limit` (query)|parameter type `i64` -> `String`
bump=major
