spargen/tests/snapshots/diff__changing_a_documented_error_type_is_major.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|error-type-changed|GET /pets|error type `String` -> `i64`
bump=major
