spargen/tests/snapshots/diff__changing_a_request_body_type_is_major.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|request-body-type-changed|GET /pets|request body type `Pet` -> `String`
bump=major
