spargen/tests/snapshots/diff__changing_a_types_generation_kind_is_major.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|type-kind-changed|Status|type kind `struct` -> `enum`
bump=major
