spargen/tests/snapshots/diff__changing_a_union_variant_payload_type_is_major.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|variant-type-changed|Status|variant `StatusVariant1` type `i64` -> `bool`
bump=major
