spargen/tests/snapshots/diff__changing_the_success_type_is_major.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|success-type-changed|GET /pets|success type `Pet` -> `String`
bump=major
