spargen/tests/snapshots/diff__changing_what_a_cycle_member_newtype_wraps_is_major-2.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|field-type-changed|Node.0|field type `Vec<Other>` -> `Vec<Node>`
major|type-kind-changed|Other|type kind `newtype` -> `alias`
bump=major
