spargen/tests/snapshots/diff__changing_what_a_cycle_member_newtype_wraps_is_major.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|field-type-changed|Node.0|field type `Vec<Node>` -> `Vec<Other>`
minor|type-added|Other|new public type
bump=major
