spargen/tests/snapshots/diff__documenting_a_bodyless_error_status_beside_the_one_error_body_is_major.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|error-type-changed|GET /pets|error type `String` -> `Error{403:(), 404:String}`
bump=major
