spargen/tests/snapshots/diff__documenting_a_bodyless_success_beside_the_body_is_major.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|success-type-changed|GET /pets|success type `Pet` -> `Success{200:Pet, 204:()}`
bump=major
