spargen/tests/snapshots/diff__documenting_default_beside_a_declared_success_changes_only_the_error_type.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|error-type-changed|GET /pets|error type `None` -> `String`
bump=major
